--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			</div>
 			<div id="gallery-thumb">
 				<div id="gallery-thumb-nav">
-					<div id="thumb-nav-prev" onClick="navigateGallery('previous');">PREV</div>
-					<div id="thumb-nav-next" onClick="navigateGallery('next');">NEXT</div>
+					<div id="thumb-nav-prev" onClick="navigateGallery(this.id,'previous');">PREV</div>
+					<div id="thumb-nav-next" onClick="navigateGallery(this.id, 'next');">NEXT</div>
 				</div>
 			</div>
 		</main>
@@ -89,15 +89,46 @@ function createImageList() {
 function updateGalleryMain(index) {
 	galleryMain.append().html(imageList[index]);
 }
+
+// go to next/previous image if there is one to go to
+function navigateGallery(id, direction) {
+	var thisElement = document.getElementById(id);
+	let updateGallery = false;
+	if (direction == "previous") {
+		
+		if (thisIndex >= 1) {
+			thisIndex--;
+		
+			if (thisIndex === 0) {
+				thisElement.classList.add("disabled");
+
+			}
+			else if (thisIndex == length - 2) {
+
+				thisElement.nextElementSibling.classList.remove("disabled");
+			}
+			updateGallery = true;
+		}
+
+	}
+	else if (direction == "next") {
+		if (thisIndex < length - 1) {
+			thisIndex++;
+			
+			if (thisIndex == length - 1) {
+				thisElement.classList.add("disabled");
+			}
+			else if (thisIndex === 1) {
+				thisElement.previousElementSibling.classList.remove("disabled");
 	
-function navigateGallery(direction) {
-	if (direction == "previous" && thisIndex !== 0) {
-		thisIndex--;
+			}
+			updateGallery = true;
+		}
 	}
-	else if (direction == "next" && thisIndex !== length) {
-		thisIndex++;
+	if (updateGallery === true) {
+		updateGalleryMain(thisIndex);
+		console.log(thisIndex);
 	}
-	updateGalleryMain(thisIndex);
 }
 
 </script>
