--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<header id="header"></header>
 
 		<main id="content">
-			<div id="gallery-thumb-container">
+			<div class="gallery-thumb gallery-thumb-container">
 				<div class="close">CLOSE</div>
 
-				<div class="gallery-nav thumb">
+				<div class="gallery-nav">
 					<div class="nav-prev">PREV</div>
 					<div class="nav-next">NEXT</div>
 
@@ -30,10 +30,10 @@
 				<div class="image-viewer">
 				</div>
 			</div>
-			<div id="gallery-main-container">
+			<div class="gallery-slideshow gallery-slideshow-container">
 				<div class="close">CLOSE</div>
 	
-				<div class="gallery-nav main">
+				<div class="gallery-nav">
 					<div class="nav-prev">PREV</div>
 					<div class="nav-next">NEXT</div>
 
@@ -64,10 +64,18 @@ var thisRow = 0;
 	
 var fileName = "assets/data/dogs.json";
 	
-var galleryImageMain = $("#gallery-main-container .image-viewer");
-var galleryImageThumb = $("#gallery-thumb-container .image-viewer");
-var galleryImageMainCounter = $("#gallery-main-container .image-counter");
-var galleryImageThumbCounter = $("#gallery-thumb-container .image-counter");
+var gallerySlideshowImages = $(".gallery-slideshow-container .image-viewer");
+var gallerySlideshowImagesCounter = $(".gallery-slideshow-container .image-counter");
+var gallerySlideshowNavNext = $(".gallery-slideshow-container .nav-next");
+var gallerySlideshowNavPrev = $(".gallery-slideshow-container .nav-prev");
+	
+var galleryThumbImages = $(".gallery-thumb-container .image-viewer");
+var galleryThumbImagesCounter = $(".gallery-thumb-container .image-counter");
+var galleryThumbNavNext = $(".gallery-thumb-container .nav-next");
+var galleryThumbNavPrev = $(".gallery-thumb-container .nav-prev");
+	
+var close = $(".close");
+	
 var header = $("#header");
 var footer = $("#footer");
 
@@ -80,7 +88,7 @@ $.get("assets/snippets/footer.html", function(data) {
 	footer.html(data);
 });
 
-// fetch JSON from file and load images for main and thumbnail galleries
+// fetch JSON from file and load images for slideshow and thumbnail galleries
 $.getJSON( fileName, function( data ) {
 	$.each( data.dogs, function( key, val ) {	
 		dataImages[key] = val.image;
@@ -91,102 +99,48 @@ $.getJSON( fileName, function( data ) {
 
 	// put html blocks into ImageList[]
 	createImageList();
-	updateGalleryMainImages();
-	updateGalleryMainCounter();
-	updateGalleryThumbImages();
-	updateGalleryThumbCounter();
+	updateGallerySlideshow();
+	updateGalleryThumb();
 });	
 	
 // close gallery
-$(".close").click(function(){
+close.click(function(){
 	$(this).parent().hide();
 });
 	
-// go to the next image if main gallery or previous row if thumb gallery
-$(".nav-next").click(function(){
-	var self = $(this);
-	var parent = $(this).parent();
-	var checkMain = parent.hasClass("main");
-	var checkThumb = parent.hasClass("thumb");
-
-	if (checkMain) {
-	
-		if (thisIndex < length - 1) {
-			thisIndex++;
-
-			if (thisIndex === length - 1) {
-				self.addClass("disabled");
-			}
-			else if (thisIndex === 1) {
-				self.siblings().removeClass("disabled");
-			}
-			updateGalleryMainImages();
-			updateGalleryMainCounter();
-		}
-		
-		console.log("next index: " + thisIndex);
+// go to the next image in slideshow gallery
+gallerySlideshowNavNext.click(function(){	
+	if (thisIndex < length - 1) {
+		thisIndex++;
+		updateGallerySlideshow();
 	}
-	else if (checkThumb) {
-	
-		if (thisRow < rowMaxLength - 1) {
-			thisRow++;
+});
 
-			if (thisRow === rowMaxLength - 1) {
-				self.addClass("disabled");
-			}
-			else if (thisRow === 1) {
-				self.siblings().removeClass("disabled");
-			}
-			updateGalleryThumbImages();
-			updateGalleryThumbCounter();
-		}
-		
-		console.log("next row: " + thisRow);
+// go to the previous image in slideshow gallery 
+gallerySlideshowNavPrev.click(function(){
+	if (thisIndex >= 1) {
+		thisIndex--;
+		updateGallerySlideshow();		
+	}
+});
+	
+// go to the next row in thumb gallery
+galleryThumbNavNext.click(function(){	
+	if (thisRow < rowMaxLength - 1) {
+		thisRow++;
+		updateGalleryThumb();
 	}	
 });
 	
-// go to the previous image if main gallery or previous row if thumb gallery
-$(".nav-prev").click(function(){
-	var self = $(this);
-	var parent = $(this).parent();
-	var checkMain = parent.hasClass("main");
-	var checkThumb = parent.hasClass("thumb");
 
-	if (checkMain) {
-		if (thisIndex >= 1) {
-			thisIndex--;
-
-			if (thisIndex === 0) {
-				self.addClass("disabled");
-			}
-			else if (thisIndex === length - 2) {
-				self.siblings().removeClass("disabled");
-			}
-			updateGalleryMainImages();
-			updateGalleryMainCounter();
-		}
-		
-		console.log("prev index: " + thisIndex);
-	}
-	else if (checkThumb) {
-		if (thisRow >= 1) {
-			thisRow--;
-
-			if (thisRow === 0) {
-				self.addClass("disabled");
-			}
-			else if (thisRow === rowMaxLength - 2) {
-				self.siblings().removeClass("disabled");
-			}
-			updateGalleryThumbImages();
-			updateGalleryThumbCounter();
-		}
-		
-		console.log("prev row: " + thisRow);
+// go to the previous row in thumb gallery
+galleryThumbNavPrev.click(function(){
+	if (thisRow >= 1) {
+		thisRow--;
+		updateGalleryThumb();
 	}
 
 });
-
 
 // create HTML for images and put into imageList[]
 function createImageList() {
@@ -201,17 +155,23 @@ function createImageList() {
 	console.log(length + " images created");
 
 }
-
-// fetch image from ImageList[] and put into main gallery
-function updateGalleryMainImages() {
-	galleryImageMain.append().html(imageList[thisIndex]);
+// update slideshow gallery's prev/next nav, images, and image counter 
+function updateGallerySlideshow() {
+	checkImageIndexPosition();
+	updateGallerySlideshowImages();
+	updateGallerySlideshowCounter();
+}
+// update thumb gallery's prev/next nav, images, and row counter
+function updateGalleryThumb() {
+	checkImageRowPosition();
+	updateGalleryThumbImages();
+	updateGalleryThumbCounter();
+}
+// fetch image from ImageList[] and put into slideshow gallery
+function updateGallerySlideshowImages() {
+	gallerySlideshowImages.append().html(imageList[thisIndex]);
 }
 
-// update the main gallery's image counter to show the current image count
-function updateGalleryMainCounter() {
-	galleryImageMainCounter.text((thisIndex + 1) + " of " + length);
-}
-	
 // fetch images from ImageList[] and put into thumb gallery
 function updateGalleryThumbImages() {
 	var thisStr = "";
@@ -221,12 +181,48 @@ function updateGalleryThumbImages() {
 	for (i = startIndex; i < maxLength; i++) {
 		thisStr = thisStr + imageList[i];
 	}
-	galleryImageThumb.append().html(thisStr);
+	galleryThumbImages.append().html(thisStr);
+}
+	
+// update the slideshow gallery's image counter to show the current image count
+function updateGallerySlideshowCounter() {
+	gallerySlideshowImagesCounter.text((thisIndex + 1) + " of " + length);
 }
 
 // update the thumbnail gallery's row counter to show the current row count
 function updateGalleryThumbCounter() {
-	galleryImageThumbCounter.text((thisRow + 1) + " of " + rowMaxLength);
+	galleryThumbImagesCounter.text((thisRow + 1) + " of " + rowMaxLength);
+}
+	
+// check thisIndex to see if slideshow gallery prev/next nav should be disabled
+function checkImageIndexPosition() {
+	if (thisIndex === 0) {
+		gallerySlideshowNavPrev.addClass("disabled");
+	}
+	else if (thisIndex === 1) {
+		gallerySlideshowNavPrev.removeClass("disabled");
+	}
+	else if (thisIndex === length - 1) {
+		gallerySlideshowNavNext.addClass("disabled");
+	}
+	else if (thisIndex === length - 2) {
+		gallerySlideshowNavNext.removeClass("disabled");
+	}
+}
+// check thisRow to see if thumb gallery prev/next nav should be disabled
+function checkImageRowPosition() {
+	if (thisRow === 0) {
+		galleryThumbNavPrev.addClass("disabled");
+	}
+	else if (thisRow === 1) {
+		galleryThumbNavPrev.removeClass("disabled");
+	}
+	if (thisRow === rowMaxLength - 2) {
+		galleryThumbNavNext.removeClass("disabled");
+	}
+	else if (thisRow === rowMaxLength - 1) {
+		galleryThumbNavNext.addClass("disabled");
+	}
 }
 </script>
 </body>
