--- a/index.html
+++ b/index.html
@@ -102,7 +102,29 @@ $(document).ready(function(){
 		}
 
 	});
+	
+	
+	$(document).on("click", ".gallery-thumb-container .gallery-image", function(){
+		thisIndex = parseInt(this.id);
+		updateBorder($(this));
+		updateGallerySlideshow();
+		
+	});
 
+
+	// add hyperlinks to the gallery nav controls
+	function addControls() {
+		$(".gallery-nav .nav-prev").each(function(){
+			$(this).html("<a title='Get Previous'><i class='fas fa-angle-double-left'></i></a>");
+	
+		});
+		$(".gallery-nav .nav-next").each(function(){
+			$(this).html("<a title='Get Next'><i class='fas fa-angle-double-right'></i></a>");
+		});
+		close.each(function(){
+			$(this).html("<a class='close' title='Close'><i class='far fa-times-circle'></i></a>");
+		});
+	}
 	// create HTML for images and put into imageList[]
 	function createImageList() {
 		length = dataImages.length;
@@ -118,6 +140,7 @@ $(document).ready(function(){
 	}
 	// update slideshow gallery's prev/next nav, images, and image counter 
 	function updateGallerySlideshow() {
+		updateBorder();
 		checkImageIndexPosition();
 		updateGallerySlideshowImages();
 		updateGallerySlideshowCounter();
@@ -131,6 +154,7 @@ $(document).ready(function(){
 	// fetch image from ImageList[] and put into slideshow gallery
 	function updateGallerySlideshowImages() {
 		gallerySlideshowImages.append().html(imageList[thisIndex]);
+
 	}
 
 	// fetch images from ImageList[] and put into thumb gallery
@@ -160,15 +184,16 @@ $(document).ready(function(){
 		if (thisIndex === 0) {
 			gallerySlideshowNavPrev.addClass("disabled");
 		}
-		else if (thisIndex === 1) {
+		else if (thisIndex >= 1) {
 			gallerySlideshowNavPrev.removeClass("disabled");
 		}
-		else if (thisIndex === length - 1) {
+		if (thisIndex === length - 1) {
 			gallerySlideshowNavNext.addClass("disabled");
 		}
-		else if (thisIndex === length - 2) {
+		else if (thisIndex <= length - 2) {
 			gallerySlideshowNavNext.removeClass("disabled");
 		}
+		console.log("thisIndex: " + thisIndex + " length: " + length);
 	}
 	// check thisRow to see if thumb gallery prev/next nav should be disabled
 	function checkImageRowPosition() {
@@ -185,17 +210,12 @@ $(document).ready(function(){
 			galleryThumbNavNext.addClass("disabled");
 		}
 	}
-	function addControls() {
-		$(".gallery-nav .nav-prev").each(function(){
-			$(this).html("<a title='Get Previous'><i class='fas fa-angle-double-left'></i></a>");
-	
-		});
-		$(".gallery-nav .nav-next").each(function(){
-			$(this).html("<a title='Get Next'><i class='fas fa-angle-double-right'></i></a>");
-		});
-		$(".close").each(function(){
-			$(this).html("<a class='close' title='Close'><i class='far fa-times-circle'></i></a>");
-		});
+
+	function updateBorder() {
+		
+		$(".active").removeClass("active");
+		$(".gallery-thumb-container #" + thisIndex).children("img").addClass("active");
+		
 	}
 });
 </script>
